2015-03-04  Marcus Shawcroft  <marcus.shawcroft@arm.com>

	* elfxx-aarch64.c (decode_add_imm, decode_movw_imm)
	(decode_tst_branch_ofs_14, decode_ld_lit_ofs_19)
	(decode_cond_branch_ofs_19, decode_branch_ofs_26): Remove.

2015-07-21  Tristan Gingold  <gingold@adacore.com>

	* version.m4: Bump version to 2.25.2
	* configure: Regenerate.

2015-07-21  Tristan Gingold  <gingold@adacore.com>

	* version.m4: Bump version to 2.25.1
	* configure: Regenerate.

2015-07-10  Alan Modra  <amodra@gmail.com>

	Apply from master
	2015-07-05  Richard Sandiford  <richard.sandiford@arm.com>
	* elf64-ppc.c (toc_adjusting_stub_needed): Use the symbol value
	plus addend rather than the original st_value when looking up
	entries in opd->adjust.

	2015-06-16  Alan Modra  <amodra@gmail.com>
	* elf32-ppc.c (ppc_elf_relocate_section): Correct binary search of
	dynamic relocs.

	2015-06-05  Alan Modra  <amodra@gmail.com>
	* elf64-ppc.c (ppc_elf_relocate_section): Move dynamic text
	relocs with insns moved by --ppc476-workaround.  Correct
	output of REL16 relocs.

	2015-04-23  Alan Modra  <amodra@gmail.com>
	* elf64-ppc.c (TOC_BASE_ALIGN): Define.
	(ppc64_elf_next_toc_section): Align multi-got toc base.
	(ppc64_elf_set_toc): Likewise initial toc base and .TOC. symbol.

	2015-03-24  Alan Modra  <amodra@gmail.com>
	* elf64-ppc.c (ppc64_elf_relocate_section): Report overflow to
	stubs, even those for undefined weak symbols.  Otherwise, don't
	report relocation overflow on branches to undefined strong
	symbols.  Fix memory leak.
	* elf32-ppc.c (ppc_elf_relocate_section): Don't report relocation
	overflow on branches to undefined strong symbols.

2015-06-23  Jiong Wang  <jiong.wang@arm.com>

	Apply from master:
	2015-06-23  Jiong. Wang  <jiong.wang@arm.com>

	* elfnn-aarch64.c (aarch64_readonly_dynrelocs): New function.
	(elfNN_aarch64_size_dynamic_sections): Traverse hash table to check
	relocations against read-only sections.

2015-06-19  Nick Clifton  <nickc@redhat.com>

	PR 18481